changed name for workoutrouter url get api. Cleaned up exercise card and made basic syle adjustment

--- a/src/components/LandingPage/ExerciseCard/ExerciseCard.css
+++ b/src/components/LandingPage/ExerciseCard/ExerciseCard.css
@@ -1,4 +1,4 @@
-#exercise-card-description {
+.exercise-card-description {
     margin-top: -20px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 10px;
